--- a/Bindu_Capstone_Project_Sentiment_based.ipynb
+++ b/Bindu_Capstone_Project_Sentiment_based.ipynb
@@ -202,7 +202,7 @@
     }
    ],
    "source": [
-    "path = 'D:\\\\Upgrade_projects\\\\Capstone\\\\Bindu_capstone\\\\dataset\\\\sample30.csv'\n",
+    "path = 'https://raw.githubusercontent.com/adwayskirwe/Capstone/main/sample30.csv'\n",
     "reviews_df = pd.read_csv(path)\n",
     "\n",
     "print(f\"Shape of the pandas loaded dataset = {reviews_df.shape} \\n\")\n",
