--- a/Bindu_Capstone_Project_Sentiment_based.ipynb
+++ b/Bindu_Capstone_Project_Sentiment_based.ipynb
@@ -1966,7 +1966,7 @@
    "outputs": [],
    "source": [
     "#Saving the model using pickle\n",
-    "with open('D:\\\\Upgrade_projects\\\\Capstone\\\\Bindu_capstone\\\\model_pkl', 'wb') as files:\n",
+    "with open('model_pkl', 'wb') as files:\n",
     "    pickle.dump(logisticRegression, files)"
    ]
   },
